<resources>
    <string name="app_name">MyDroid2</string>
    <string name="android_image_description">image of the face of the android bt</string>
    <string name="enter_hobbies_hint">Enter Hobbies</string>
    <string name="main_title_text">My Application</string>
    <string name="enter_hobbies_text" />
    <string name="result_hobbies_text">Hobbies:</string>
    <string name="hobbies_button_text">Add Hobby</string>
    <string name="my_bio_description">
        industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer
        took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but
        also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with
        the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software
        like Aldus PageMaker including versions of Lorem Ipsum.
        industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer
        took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but
        also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with
        the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software
        like Aldus PageMaker including versions of Lorem Ipsum.
    </string>
</resources>